# voice-agent

./: .env.example  .gitignore  CLEANUP_INVENTORY.md  DEPLOYMENT_READY_REPORT.md  EMAIL_DELIVERABILITY_CHECKLIST.md  README.md  SETUP-LOCAL.md  VOICE_AGENT_MODULE.md  client-delivery-finalization-changed-files-bundle.txt  deploy.sh  developer-testing-changed-files-bundle.txt  docker-compose.yml  ecosystem.config.cjs  ecosystem.config.js  full-audit-fixes-changed-files-bundle.txt  package-lock.json  package.json  payment-email-changed-files-bundle.txt  pnpm-lock.yaml  pre_cleanup_inventory.txt  production-hardening-changed-files-bundle.txt  shopify-commerce-layer-changed-files-bundle.txt  turbo.json  voice-agent-runtime-changed-files-bundle.txt
services/voice-agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_send_payment_link.py  test_v2_remaining_tools.py
services/voice-agent/app/: config.py  main.py
services/voice-agent/app/ai/: client.py  prompt_builder.py  tool_loop.py
services/voice-agent/app/api/: health.py  voice.py
services/voice-agent/app/clients/: agent_api.py  resend.py  shopify.py
services/voice-agent/app/core/: config.py  deprecated.py  env_validation.py  logging.py
services/voice-agent/app/pipeline/: audio.py  audioop_compat.py  call_debug.py  event_bus.py  intent.py  llm.py  stt.py  (+5 more)
services/voice-agent/tests/: test_deepgram_stt.py  test_env_validation.py  test_get_caller_info.py  test_realtime_layer.py  test_social_intent.py
services/voice-agent/voice_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+6212 files in other folders)
